# timeseries_analysis

./: LICENSE  README.md  pyproject.toml  resources
timeseries_basic/: pyproject.toml
timeseries_basic/data/: 10yrBond.csv  GoogleSearch.csv
timeseries_basic/timeseries_basic/: correlation_autocorrelation.ipynb
timeseries_data_manipulation/: pyproject.toml
timeseries_data_manipulation/data/: data.xlsx
timeseries_data_manipulation/timeseries_data_manipulation/: rolling_expanding_metrics.ipynb  timeseries_metrics_resampling.ipynb  timeseries_pandas.ipynb  value_weighted_index.ipynb
